# mipt_arkanoid_cpp

./: ArkanoidWindow.cpp  ArkanoidWindow.h  Ball.cpp  Ball.h  Block.cpp  Block.h  BlocksMatrix.cpp  BlocksMatrix.h  CMakeLists.txt  GameScreen.cpp  GameScreen.h  Matrix.cpp  Matrix.h  Platform.cpp  Platform.h  StartScreen.cpp  StartScreen.h  main.cpp
Graph_lib/frontend/: PlatformShape.cpp  PlatformShape.h  StartWindow.cpp  StartWindow.h
